--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <style>
+
+        /* ESTILOS DE ANIMISTAS */
+
+        /* ESTILO PARA ICONOS DE REDES */
+        @-webkit-keyframes rotate-center{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes rotate-center{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}
+        
+        /* ESTILO PARA CARDS */
+        @-webkit-keyframes scale-in-center{0%{-webkit-transform:scale(0);transform:scale(0);opacity:1}100%{-webkit-transform:scale(1);transform:scale(1);opacity:1}}@keyframes scale-in-center{0%{-webkit-transform:scale(0);transform:scale(0);opacity:1}100%{-webkit-transform:scale(1);transform:scale(1);opacity:1}}
+    </style>
 </head>
 <body>
     <header class="header">
@@ -116,9 +125,9 @@
     <footer class="footer">
 
         <div class="footer__redes">
-            <a href="https://www.facebook.com/nico12k12/" target="_blank"><i class="bi bi-facebook footer__i"></i></a>
-            <a href="https://www.instagram.com/lnicoherrera/" target="_blank"><i class="bi bi-instagram footer__i"></i></a>
-            <a href="https://www.twitter.com" target="_blank"><i class="bi bi-twitter footer__i"></i></a>
+            <a class="rotate-center" href="https://www.facebook.com/nico12k12/" target="_blank"><i class="bi bi-facebook footer__i"></i></a>
+            <a class="rotate-center" href="https://www.instagram.com/lnicoherrera/" target="_blank"><i class="bi bi-instagram footer__i"></i></a>
+            <a class="rotate-center" href="https://www.twitter.com" target="_blank"><i class="bi bi-twitter footer__i"></i></a>
         </div>
         <div class="footer__info footer__info--shadow">
             <p>Copyrigth © 2022 Ecommerce-RugbyStore S.R.L</p>
